--- a/.github/workflows/docker-build-image.yml
+++ b/.github/workflows/docker-build-image.yml
@@ -20,14 +20,16 @@ jobs:
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-#      - name: Login to Docker Hub
-#        uses: docker/login-action@v2
-#        with:
-#          username: artiomn
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ env.DOCKERHUB_LOGIN }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - uses: actions/checkout@v4
       - name: Build the Docker image for KNP build
         working-directory: docker/build-image
-        run: docker build . --file Dockerfile --tag knp-build-image-amd64
+        run: |
+          docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_LOGIN }}/knp-build-image-amd64 && \
+          docker push ${{ env.DOCKERHUB_LOGIN }}/knp-build-image-amd64
         timeout-minutes: 180  # Adjust the timeout as needed
         continue-on-error: true
