--- a/.github/workflows/docker-build-image.yml
+++ b/.github/workflows/docker-build-image.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build the Docker image for KNP build
         working-directory: docker/build-image
         run: |
-          docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_LOGIN }}/knp-build-image-amd64 && \
-          docker push ${{ env.DOCKERHUB_LOGIN }}/knp-build-image-amd64
+          docker build . --file Dockerfile --tag ${{ env.DOCKERHUB_LOGIN }}/knp-build-image && \
+          docker push ${{ env.DOCKERHUB_LOGIN }}/knp-build-image
         timeout-minutes: 180  # Adjust the timeout as needed
         continue-on-error: true
