--- a/.github/workflows/docker-build-image.yml
+++ b/.github/workflows/docker-build-image.yml
@@ -23,13 +23,13 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: kasperskydh
+          username: $DOCKERHUB_LOGIN
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - uses: actions/checkout@v4
       - name: Build the Docker image for KNP build
         working-directory: docker/build-image
         run: |
-          docker build . --file Dockerfile --tag ${{ env.DOCKERHUB_LOGIN }}/knp-build-image && \
-          docker push ${{ env.DOCKERHUB_LOGIN }}/knp-build-image
+          docker build . --file Dockerfile --tag $DOCKERHUB_LOGIN/knp-build-image && \
+          docker push $DOCKERHUB_LOGIN/knp-build-image
         timeout-minutes: 180  # Adjust the timeout as needed
         continue-on-error: false
