--- a/.github/workflows/docker-build-image.yml
+++ b/.github/workflows/docker-build-image.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build the Docker image for KNP build
         working-directory: docker/build-image
         run: |
-          docker build . --file Dockerfile --tag $DOCKERHUB_LOGIN/knp-build-image && \
-          docker push $DOCKERHUB_LOGIN/knp-build-image
+          docker build . --file Dockerfile --tag ${{ vars.DOCKERHUB_LOGIN }}/knp-build-image && \
+          docker push ${{ vars.DOCKERHUB_LOGIN }}/knp-build-image
         timeout-minutes: 180  # Adjust the timeout as needed
         continue-on-error: false
