Booste removing disabled

--- a/docker/build-image/Dockerfile
+++ b/docker/build-image/Dockerfile
@@ -111,7 +111,7 @@ RUN \
     wget \
     zip \
     $(apt list|awk '/boost.*1.81.*-dev/ {print($1);}') \
-  && apt-get purge -y libboost\* \
+  # && apt-get purge -y libboost\* \
   && apt-get clean \
   # && git clone --recursive --depth 1 --branch boost-1.84.0 https://github.com/boostorg/boost /usr/local/boost/1.84.0 \
   # && cd /usr/local/boost/1.84.0 \
