--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -163,4 +163,4 @@ jobs:
     #    password: ${{ secrets.PYPI_API_TOKEN }}
     #    repository_url: https://upload.pypi.org/legacy/
     #    skip_existing: true
-        print_hash: true
+    #    print_hash: true
