--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -91,8 +91,8 @@ jobs:
         draft: false
         prerelease: false
 
-  windows_build:
-    runs-on: windows-latest
+  non_linux_build:
+    runs-on: ${{ matrix.os }}
 
     strategy:
       # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
