--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -100,7 +100,8 @@ jobs:
 
       # Set up a matrix to run:
       matrix:
-        os: [macos-latest, windows-latest]
+        # [macos-latest, windows-latest]
+        os: [windows-latest]
         build_type: [Debug]
         c_compiler: [clang, cl]
         include:
