--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -105,12 +105,12 @@ jobs:
         build_type: [Debug]
         c_compiler: [clang, cl]
         include:
-          - os: macos-latest
-            c_compiler: clang
-            cpp_compiler: clang++
-            boost_install_dir:
-            boost_platform_version: 11
-            boost_toolset: clang
+          # - os: macos-latest
+          #   c_compiler: clang
+          #   cpp_compiler: clang++
+          #   boost_install_dir:
+          #   boost_platform_version: 11
+          #   boost_toolset: clang
           - os: windows-latest
             c_compiler: cl
             cpp_compiler: cl
@@ -120,8 +120,8 @@ jobs:
         exclude:
           - os: windows-latest
             c_compiler: clang
-          - os: macos-latest
-            c_compiler: cl
+          # - os: macos-latest
+          #   c_compiler: cl
 
     # <Windows, Release, latest MSVC compiler toolchain on the default runner image, default generator>
     steps:
