Packages publishing add

--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -18,6 +18,7 @@ on:
       - '!/doc/**'
       - '!/docker/**'
       - '!/tools/**'
+      - '!/ci/**'
   pull_request:
     branches: [ "master" ]
 
@@ -29,9 +30,9 @@ jobs:
       # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
       fail-fast: false
 
-      # Set up a matrix to run the following 3 configurations:
-      # 1. <Linux, Release, latest GCC compiler toolchain on the default runner image, default generator>
-      # 2. <Linux, Release, latest Clang compiler toolchain on the default runner image, default generator>
+      # Set up a matrix to run the following configurations:
+      # 1. <Linux, Debug, latest GCC compiler toolchain on the default runner image, default generator>
+      # 2. <Linux, Debug, latest Clang compiler toolchain on the default runner image, default generator>
       matrix:
         os: [ubuntu-latest]
         build_type: [Debug]
@@ -62,8 +63,7 @@ jobs:
         -S .
 
     - name: Build
-      # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      run: docker run --rm -v ${{ github.workspace }}:/KNP -w /KNP ${{ vars.DOCKERHUB_LOGIN }}/knp-build-image cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }} --parallel 8
+      run: docker run --rm -v ${{ github.workspace }}:/KNP -w /KNP ${{ vars.DOCKERHUB_LOGIN }}/knp-build-image cmake --build ${{ steps.strings.outputs.build-output-dir }} --parallel 8
       timeout-minutes: 180
 
     - name: Test
@@ -73,6 +73,13 @@ jobs:
     - name: Create deb packages
       run: docker run --rm -v ${{ github.workspace }}:/KNP -w /KNP/${{ steps.strings.outputs.build-output-dir }} ${{ vars.DOCKERHUB_LOGIN }}/knp-build-image cpack -G DEB
       timeout-minutes: 180
+
+    - name: Upload build artifacts
+      if: matrix.c_compiler == 'gcc'
+      uses: actions/upload-artifact@v3
+      with: 
+        name: Deb packages
+        path: ${{ steps.strings.outputs.build-output-dir }}/_packages/
 
     - name: Create new release
       id: create_release
