--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -178,7 +178,7 @@ jobs:
           ls -1
       - name: Create new release
         id: create_release
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+#        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         uses: softprops/action-gh-release@v1
         env:
           # This token is provided by Actions.
