MP backend CMakeLists fix: #18

--- a/knp/backends/cpu/cpu-multi-threaded-backend/CMakeLists.txt
+++ b/knp/backends/cpu/cpu-multi-threaded-backend/CMakeLists.txt
@@ -53,7 +53,7 @@ knp_add_library("${PROJECT_NAME}"
     LINK_PRIVATE
         Boost::headers spdlog::spdlog
         KNP::Backends::CPU::Library KNP::Backends::CPU::ThreadPool
-    LINK_PRUBLIC
+    LINK_PUBLIC
         KNP::Devices::CPU
 )
 
